2007-02-24  Synge Todo <wistaria@comp-phys.org>

	* version 3.2b3

	- prerequisites: boost-1.31.1, alps-1.3b3, lapack

	- Implemented all the feasures planed for alps-application release 1.3

	- Support for ALPS/parapack
	
	- ToDo: fixed for negative signs, external field for SSE, QWL,
	more tests, documentation
	
2007-02-24  Synge Todo <wistaria@comp-phys.org>
	
	* Added custom measurements (average, local, correlations,
	structure factor)
	
2006-12-15  Synge Todo <wistaria@comp-phys.org>

	* Added support for ALPS/parapack.
	
2006-01-26  Synge Todo <wistaria@comp-phys.org>
	
	* Added extras subdirectory
	
2006-01-23  Synge Todo <wistaria@comp-phys.org>

	* Fixed evaluation of non-linear quantities.
	
2006-01-20  Synge Todo <wistaria@comp-phys.org>

        * version 3.2b1

	- prerequisites: boost-1.31.1, alps snapshot (2006/01/20), lapack

	- new features: new internal tree-like data structure for
	clusters, two-pass cluster update, support for longitudinal field,
	transverse field, single-ion anisotropy (D-term), variable length SSE
	
	- ToDo: fixed for negative signs, external field for SSE, QWL, add
	measurement of stiffness, more tests, documentation
	
2006-01-06  Synge Todo <wistaria@comp-phys.org>

	* First working version of new alps-looper (candidate of version 3.2)

	* Old version is moved into v3.1 subdirectory
	
2005-02-23  Synge Todo <wistaria@comp-phys.org>

	* Added support for disordered lattices
	
2004-12-10  Synge Todo <wistaria@comp-phys.org>

	* Added support for MKL 7.2
	
2004-11-25  Synge Todo <wistaria@comp-phys.org>

	* Adopted boost::program_options
	
2004-11-07  Synge Todo <wistaria@comp-phys.org>

	* Moved all the operator definitions into site basis (for ALPS 1.3).
	
2004-10-08  Synge Todo <wistaria@comp-phys.org>

        * version 3.1.2

	* Rearranged source files to reduce memory size for build.

	* Added master header file 'looper.h'.

	* Removed virtual_graph class template and virtual_graph.h.
	