@@ -2,7 +2,7 @@
 *
 * ALPS/looper: multi-cluster quantum Monte Carlo algorithms for spin systems
 *
-* Copyright (C) 2006 by Synge Todo <wistaria@comp-phys.org>
+* Copyright (C) 2006-2007 by Synge Todo <wistaria@comp-phys.org>
 *
 * This software is published under the ALPS Application License; you
 * can use, redistribute it and/or modify it under the terms of the
@@ -28,9 +28,9 @@
 #include <alps/lattice.h>
 #include <looper/graph.h>
 #include <looper/model.h>
-#include <looper/time.h>
 
 #include <looper/susceptibility.h>
+#include <looper/sop.h>
 #include <looper/top.h>
 
 struct loop_config {
@@ -50,6 +50,7 @@ struct loop_config {
   // measurements
   typedef looper::measurement_set<
     looper::susceptibility,
+    looper::string_order_parameter,
     looper::twist_order_parameter
   > measurement_set;
 };
