@@ -146,6 +146,11 @@ Staggered Susceptibility: 1.25919 +/- 0.0263; tau = 0.461 WARNING: ERRORS NOT CO
     bin #2   : 512      entries: error = 0.0220714
     bin #3   : 256      entries: error = 0.0248066
     bin #4   : 128      entries: error = 0.0263148
+String Order Parameter: 0.0411987 +/- 0.00115; tau = 0.269 WARNING: ERRORS NOT CONVERGED!!!
+    bin #1   : 1024     entries: error = 0.000926657
+    bin #2   : 512      entries: error = 0.00103931
+    bin #3   : 256      entries: error = 0.00108284
+    bin #4   : 128      entries: error = 0.00114925
 Susceptibility: 0.027832 +/- 0.00558; tau = 0.712 WARNING: ERRORS NOT CONVERGED!!!
     bin #1   : 1024     entries: error = 0.00358587
     bin #2   : 512      entries: error = 0.00433679
@@ -331,6 +336,11 @@ Staggered Susceptibility: 3.69824 +/- 0.0721; tau = 0.296 WARNING: ERRORS NOT CO
     bin #2   : 512      entries: error = 0.0646283
     bin #3   : 256      entries: error = 0.0665965
     bin #4   : 128      entries: error = 0.0720927
+String Order Parameter: 0.13031 +/- 0.00443; tau = 0.394 WARNING: ERRORS NOT CONVERGED!!!
+    bin #1   : 1024     entries: error = 0.00330907
+    bin #2   : 512      entries: error = 0.00379082
+    bin #3   : 256      entries: error = 0.0043149
+    bin #4   : 128      entries: error = 0.0044258
 Susceptibility: 0.0371094 +/- 0.00652; tau = 0.766 WARNING: ERRORS NOT CONVERGED!!!
     bin #1   : 1024     entries: error = 0.00409973
     bin #2   : 512      entries: error = 0.00505158
@@ -516,6 +526,11 @@ Staggered Susceptibility: 7.62298 +/- 0.151; tau = 0.292 WARNING: ERRORS NOT CON
     bin #2   : 512      entries: error = 0.136677
     bin #3   : 256      entries: error = 0.150146
     bin #4   : 128      entries: error = 0.151358
+String Order Parameter: 0.254944 +/- 0.00945; tau = 0.51 WARNING: ERRORS NOT CONVERGED!!!
+    bin #1   : 1024     entries: error = 0.00664519
+    bin #2   : 512      entries: error = 0.00742965
+    bin #3   : 256      entries: error = 0.00837835
+    bin #4   : 128      entries: error = 0.00944568
 Susceptibility: 0.03125 +/- 0.00584; tau = 0.691 WARNING: ERRORS NOT CONVERGED!!!
     bin #1   : 1024     entries: error = 0.00378591
     bin #2   : 512      entries: error = 0.00474101
@@ -650,6 +665,11 @@ Staggered Susceptibility: 1.25603 +/- 0.0501; tau = 0.354 WARNING: ERRORS NOT CO
     bin #2   : 512      entries: error = 0.0429724
     bin #3   : 256      entries: error = 0.0470767
     bin #4   : 128      entries: error = 0.0501077
+String Order Parameter: 0.0411987 +/- 0.00115; tau = 0.269 WARNING: ERRORS NOT CONVERGED!!!
+    bin #1   : 1024     entries: error = 0.000926657
+    bin #2   : 512      entries: error = 0.00103931
+    bin #3   : 256      entries: error = 0.00108284
+    bin #4   : 128      entries: error = 0.00114925
 Susceptibility: 0.0273438 +/- 0.0082; tau = 0.792 WARNING: ERRORS NOT CONVERGED!!!
     bin #1   : 1024     entries: error = 0.00510133
     bin #2   : 512      entries: error = 0.0063734
@@ -784,6 +804,11 @@ Staggered Susceptibility: 3.64117 +/- 0.14; tau = 0.229 WARNING: check error con
     bin #2   : 512      entries: error = 0.127669
     bin #3   : 256      entries: error = 0.135717
     bin #4   : 128      entries: error = 0.139721
+String Order Parameter: 0.13031 +/- 0.00443; tau = 0.394 WARNING: ERRORS NOT CONVERGED!!!
+    bin #1   : 1024     entries: error = 0.00330907
+    bin #2   : 512      entries: error = 0.00379082
+    bin #3   : 256      entries: error = 0.0043149
+    bin #4   : 128      entries: error = 0.0044258
 Susceptibility: 0.0361328 +/- 0.00857; tau = 0.577 WARNING: ERRORS NOT CONVERGED!!!
     bin #1   : 1024     entries: error = 0.00583759
     bin #2   : 512      entries: error = 0.00693799
@@ -918,6 +943,11 @@ Staggered Susceptibility: 7.48737 +/- 0.301; tau = 0.262 WARNING: ERRORS NOT CON
     bin #2   : 512      entries: error = 0.271156
     bin #3   : 256      entries: error = 0.298513
     bin #4   : 128      entries: error = 0.300801
+String Order Parameter: 0.254944 +/- 0.00945; tau = 0.51 WARNING: ERRORS NOT CONVERGED!!!
+    bin #1   : 1024     entries: error = 0.00664519
+    bin #2   : 512      entries: error = 0.00742965
+    bin #3   : 256      entries: error = 0.00837835
+    bin #4   : 128      entries: error = 0.00944568
 Susceptibility: 0.0351562 +/- 0.00808; tau = 0.484 WARNING: ERRORS NOT CONVERGED!!!
     bin #1   : 1024     entries: error = 0.00576108
     bin #2   : 512      entries: error = 0.00715133
