@@ -1,3 +1,7 @@
+2007-03-12  Synge Todo <wistaria@comp-phys.org>
+
+	* [pro] Added string order parameter.
+	
 2007-02-24  Synge Todo <wistaria@comp-phys.org>
 
 	* version 3.2b3
